--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="row py-0"></div>
 <div class="row" ngxUiLoaderBlurred>
-  <div class="col-sm">
-    <div class="card">
+  <div class="col-sm" >
+    <div class="card card-min-height">
       <div class="card-body">
         <div class="row">
           <span class="badge-info-id text-center">МОЙ ID: {{util.getCurrentUser().id}}</span>
@@ -64,8 +64,8 @@
       </div>
     </div>
   </div>
-  <div class="col-sm">
-    <div class="card">
+  <div class="col-sm" >
+    <div class="card card-min-height">
       <div class="card-body">
         <table style="width:100%;">
           <tr>
